SPA system upgrade
Now we can:
SPA
- Subscribe new pages to the SPA system
- Define a fallback page
- Add actions to execute when SPA system gets loaded
- Add more than one callback at once to a page

HandledEvent:
- Bind or remove an array of functions to an event at once
- Consume all the listeners with a consumer function

Other changes:
- Removed the '.html' from url routes
- ListenerGroup is now called HandledEvent
- All the SPA related functions is now inside the spa global variable
- Changed some in-code documentation
- Added tern-project configuration file

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
       <script src="./static/js/lib/jquery.min.js"></script>
 
       <script src="./static/js/util/Iterator.js"></script>
-      <script src="./static/js/util/ListenerGroup.js"></script>
+      <script src="./static/js/util/HandledEvent.js"></script>
 
       <script src="./static/js/spa/Page.js"></script>
       <script src="./static/js/spa/spa.js"></script>
@@ -30,6 +30,10 @@
    </head>
    <body>
 
+
+      <section id="not-found-section">
+         404
+      </section>
 
       <section id="login-section">
          login
