Bug fixed and empty page's name
Now we can:
- Subscribe pages with empty name
- Due to a bugfix, the user can't try to access subdirectories other
than static's anymore

--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,10 @@
          404
       </section>
 
+      <section id="index-section">
+         index
+      </section>
+
       <section id="login-section">
          login
       </section>
@@ -47,7 +51,8 @@
          vehicle-schedule
       </section>
 
-      <button type="button" onclick="spa.navigateTo()">root</button>
+      <button type="button" onclick="spa.navigateTo('')">root</button>
+      <button type="button" onclick="spa.navigateTo()">404</button>
       <button type="button" onclick="spa.navigateTo('login')">login</button>
       <button type="button" onclick="spa.navigateTo('vehicles')">vehicles</button>
       <button type="button" onclick="spa.navigateTo('vehicle-schedule')">vehicle-schedule</button>
