Data-page attribute
Changes:
- Now you'll have to use a data-page attribute on a html element in
order to link it to a page
- On the JS, only the name of the page (data-page) is needed to
subscribe it now

--- a/web/index.html
+++ b/web/index.html
@@ -31,23 +31,23 @@
    <body>
 
 
-      <section id="not-found-section">
+      <section id="not-found-section" data-page="404">
          404
       </section>
 
-      <section id="index-section">
+      <section id="index-section" data-page="">
          index
       </section>
 
-      <section id="login-section">
+      <section id="login-section" data-page="login">
          login
       </section>
 
-      <section id="vehicles-section">
+      <section id="vehicles-section" data-page="vehicles">
          vehicles
       </section>
 
-      <section id="vehicle-schedule-section">
+      <section id="vehicle-schedule-section" data-page="vehicle-schedule">
          vehicle-schedule
       </section>
 
