--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,8 @@
       <script src="./static/js/spa/Page.js"></script>
       <script src="./static/js/spa/spa.js"></script>
 
+      <script src="./static/js/pages/login.js"></script>
+
 
       <title>Eiger</title>
    </head>
