Done Check-Session
index.html - add tag <section> Auth page.
login.js - Fixed crashes to the browsing.
login.js - Some parts of log-in have been implemented.
spa.js - new Page('auth').

--- a/web/index.html
+++ b/web/index.html
@@ -86,6 +86,10 @@
       </section>
 
 
+      <section id="auth-section" data-page="auth">
+         Auth Page
+      </section>
+
 
       <!--
       <button type="button" onclick="spa.navigateTo('')">root</button>
