Not yet complete - Listing of Vehicles
- Requisition of vehicles to the data base.
- Listing vehicles on cards.
- Event to the clicking in Vehicle.
- Redirect to the page of vehicle information.

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,8 @@
       <script src="./static/js/spa/Page.js"></script>
       <script src="./static/js/spa/spa.js"></script>
       <script src="./static/js/pages/login.js"></script>
+      <script src="./static/js/pages/index.js"></script>
+      <script src="./static/js/pages/vehicle-info.js"></script>
 
 
       <title>Eiger</title>
@@ -155,6 +157,14 @@
 
             -->
          </ul>
+      </section>
+
+
+      <!--
+      Vehicle information Page
+      -->
+      <section data-page="vehicle-info">
+         Vehicle Information
       </section>
    </body>
 </html>
