--- a/web/index.html
+++ b/web/index.html
@@ -156,5 +156,56 @@
             -->
          </ul>
       </section>
+
+
+
+
+      <!--
+      Vehicles Page
+      -->
+      <section id="vehicle-info-section" data-page="vehicle-info">
+         <!-- Appbar -->
+         <header class="app-bar flex-horizontal-layout tinted">
+            <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">arrow_back</button>
+            <span>Vehicle</span>
+         </header>
+
+         <!-- Sub appbar -->
+         <header class="app-bar flex-horizontal-layout tinted raised vehicle-info-app-bar">
+
+            <!-- Vehicle appbar info -->
+            <div class="flex-horizontal-layout">
+               <div class="round-thumbnail size-3" style="background-image: url(./static/res/image/test/test.jpg)"></div>
+               <div class="vertical-layout">
+                  <span id="vehicle-info-title" class="primary">[title] - [plate]</span>
+                  <span id="vehicle-info-description" class="secondary">[year] - [manufacturer] - [type]</span>
+               </div>
+            </div>
+
+            <!-- Delete FAB -->
+            <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab boundary right">delete</button>
+         </header>
+
+
+         <!-- Vehicles' info form -->
+         <form id="vehicle-info-form" class="info-form">
+            <!-- Renavam output -->
+            <div class="row">
+               <i class="material-icons">card_membership</i>
+               <span id="vehicle-info-renavam" class="labeled-output" data-label="renavam">[renavam]</span>
+            </div>
+            <!-- Added date output -->
+            <div class="row">
+               <i class="material-icons">today</i>
+               <span id="vehicle-info-date" class="labeled-output" data-label="registered&nbsp;in">[date]</span>
+            </div>
+         </form>
+
+         <!-- Edit FAB -->
+         <div class="fab-container">
+            <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">edit</button>
+         </div>
+
+      </section>
    </body>
 </html>
