--- a/web/index.html
+++ b/web/index.html
@@ -24,11 +24,14 @@
 
       <script src="./static/js/util/Iterator.js"></script>
       <script src="./static/js/util/HandledEvent.js"></script>
+      <script src="./static/js/util/AutoConsumableQueue.js"></script>
+
+      <script src="./static/js/snack/snack.js"></script>
 
       <script src="./static/js/spa/Page.js"></script>
       <script src="./static/js/spa/spa.js"></script>
-      <script src="./static/js/pages/login.js"></script>
 
+      <script src="./static/js/pages/login.js"></script>
 
       <title>Eiger</title>
    </head>
@@ -159,9 +162,8 @@
 
 
 
-
       <!--
-      Vehicles Page
+      Vehicle info Page
       -->
       <section id="vehicle-info-section" data-page="vehicle-info">
          <!-- Appbar -->
@@ -205,7 +207,18 @@
          <div class="fab-container">
             <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">edit</button>
          </div>
-
       </section>
+
+
+
+      <!--
+      Snackbar
+      -->
+      <div id="snackbar" class="snackbar raised">
+         <!-- Snackbar text -->
+         <span id="snackbar-text"></span>
+         <!-- Snackbar button -->
+         <button id="snackbar-button" type="button" class="mdl-js-button mdl-js-ripple-effect"></button>
+      </div>
    </body>
 </html>
