--- a/web/index.html
+++ b/web/index.html
@@ -176,7 +176,7 @@
 
             <!-- Vehicle appbar info -->
             <div class="flex-horizontal-layout">
-               <div class="round-thumbnail size-3" style="background-image: url(./static/res/image/test/test.jpg)"></div>
+               <div id="vehicle-info-photo" class="round-thumbnail size-3"></div>
                <div class="vertical-layout">
                   <span id="vehicle-info-title" class="primary">[title] - [plate]</span>
                   <span id="vehicle-info-description" class="secondary">[year] - [manufacturer] - [type]</span>
@@ -198,7 +198,7 @@
             <!-- Added date output -->
             <div class="row">
                <i class="material-icons">today</i>
-               <span id="vehicle-info-date" class="labeled-output" data-label="registered&nbsp;in">[date]</span>
+               <span id="vehicle-info-date" class="labeled-output" data-label="registered in">[date]</span>
             </div>
          </form>
 
