--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
       <link rel="stylesheet" href="./static/css/all.css">
       <link rel="stylesheet" href="./static/css/login.css">
       <link rel="stylesheet" href="./static/css/vehicles.css">
-      <!--<link rel="stylesheet" href="./css/style.css">-->
+      <link rel="stylesheet" href="./static/css/vehicle-create.css">
 
       <!-- * JS * -->
       <script src="./static/js/lib/material.min.js"></script>
@@ -71,7 +71,7 @@
             <div class="vertical-line"></div>
 
             <!-- Login form -->
-            <form id="login-form" class="form center">
+            <form id="login-form" class="center">
                <!-- Username input -->
                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                   <input class="mdl-textfield__input" type="text" id="login-username-in">
@@ -85,7 +85,7 @@
                </div>
 
                <!-- Submit button -->
-               <button type="submit" class="box card tinted raised">Login</button>
+               <button type="submit" class="mdl-js-button mdl-js-ripple-effect box card tinted raised">Login</button>
             </form>
          </div>
       </section>
@@ -177,7 +177,7 @@
 
             <!-- Vehicle appbar info -->
             <div class="flex-horizontal-layout">
-               <div class="round-thumbnail size-3" style="background-image: url(./static/res/image/test/test.jpg)"></div>
+               <div class="round-thumbnail size-3 raised" style="background-image: url(http://localhost:3000/media/v/p/01.jpg)"></div>
                <div class="vertical-layout">
                   <span id="vehicle-info-title" class="primary">[title] - [plate]</span>
                   <span id="vehicle-info-description" class="secondary">[year] - [manufacturer] - [type]</span>
@@ -190,12 +190,15 @@
 
 
          <!-- Vehicles' info form -->
-         <form id="vehicle-info-form" class="info-form">
+         <form id="vehicle-info-form" class="form content-before-fab">
             <!-- Renavam output -->
             <div class="row">
                <i class="material-icons">card_membership</i>
                <span id="vehicle-info-renavam" class="labeled-output" data-label="renavam">[renavam]</span>
             </div>
+
+            <div class="horizontal-separator"></div>
+
             <!-- Added date output -->
             <div class="row">
                <i class="material-icons">today</i>
@@ -206,6 +209,96 @@
          <!-- Edit FAB -->
          <div class="fab-container">
             <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">edit</button>
+         </div>
+      </section>
+
+
+
+      <!--
+      Vehicle create Page
+      -->
+      <section id="vehicle-create-section" data-page="vehicle-create">
+         <!-- Appbar -->
+         <header class="app-bar flex-horizontal-layout tinted">
+            <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">arrow_back</button>
+            <span>Create new vehicle</span>
+         </header>
+
+         <!-- Sub appbar -->
+         <header class="app-bar flex-horizontal-layout tinted raised vehicle-info-app-bar">
+
+            <!-- Vehicle appbar -->
+            <div class="flex-horizontal-layout">
+               <div id="vehicle-create-pic" class="round-thumbnail size-3 raised">
+                  <i class="material-icons">add_a_photo</i>
+               </div>
+
+               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input id="vehicle-create-title" class="mdl-textfield__input" type="text" form="vehicle-create-form" pattern=".*\S+.*" required="true">
+                  <label class="mdl-textfield__label" for="vehicle-create-title">Vehicle title</label>
+               </span>
+            </div>
+
+         </header>
+
+
+         <!-- Vehicle creation form -->
+         <form id="vehicle-create-form" class="form content-before-fab">
+
+            <!-- Manufacturer input -->
+            <div class="row mdl-input-row">
+               <i class="material-icons">directions_car</i>
+               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input id="vehicle-create-manufacturer" class="mdl-textfield__input" type="text" pattern=".*\S+.*" required="true">
+                  <label class="mdl-textfield__label" for="vehicle-create-manufacturer">Manufacturer</label>
+               </span>
+            </div>
+
+            <!-- Type input -->
+            <div class="row mdl-input-row">
+               <i class="material-icons">_</i>
+               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input id="vehicle-create-type" class="mdl-textfield__input" type="text" pattern=".*\S+.*" required="true">
+                  <label class="mdl-textfield__label" for="vehicle-create-type">Type</label>
+               </span>
+            </div>
+
+            <!-- Year input -->
+            <div class="row mdl-input-row">
+               <i class="material-icons">_</i>
+               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input id="vehicle-create-year" class="mdl-textfield__input" type="text" pattern=".*\S+.*" required="true">
+                  <label class="mdl-textfield__label" for="vehicle-create-year">Year</label>
+               </span>
+            </div>
+
+
+            <div class="horizontal-separator"></div>
+
+
+            <!-- Licence plate input -->
+            <div class="row mdl-input-row">
+               <i class="material-icons">chrome_reader_mode</i>
+               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input id="vehicle-create-plate" class="mdl-textfield__input" type="text" pattern=".*\S+.*" required="true">
+                  <label class="mdl-textfield__label" for="vehicle-create-plate">Licence plate</label>
+               </span>
+            </div>
+
+            <!-- Renavam input -->
+            <div class="row mdl-input-row">
+               <i class="material-icons">_</i>
+               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input id="vehicle-create-renavam" class="mdl-textfield__input" type="text" pattern=".*\S+.*" required="true">
+                  <label class="mdl-textfield__label" for="vehicle-create-renavam">Renavam</label>
+               </span>
+            </div>
+
+         </form>
+
+         <!-- Edit FAB -->
+         <div class="fab-container">
+            <button type="submit" form="vehicle-create-form" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">done</button>
          </div>
       </section>
 
