--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,8 @@
       <script src="./static/js/spa/Page.js"></script>
       <script src="./static/js/spa/spa.js"></script>
 
-      <script src="./static/js/pages/login.js"></script>
+      <script src="./static/js/pages/subscriptions.js"></script><!--
+      <script src="./static/js/pages/login.js"></script>-->
 
       <title>Eiger</title>
    </head>
