Reservation routes and date formatter
- Set the default REST timezone as 'local'
- The reservations routes were added
- A module to format dates was implemented on web client

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,8 @@
       <script src="./static/js/util/HandledEvent.js"></script>
       <script src="./static/js/util/AutoConsumableQueue.js"></script>
 
+      <script src="./static/js/date-format/date-format.js"></script>
+
       <script src="./static/js/snack/snack.js"></script>
 
       <script src="./static/js/spa/Page.js"></script>
