--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,7 @@
       <link rel="stylesheet" href="./static/css/login.css">
       <link rel="stylesheet" href="./static/css/vehicles.css">
       <link rel="stylesheet" href="./static/css/vehicle-create.css">
+      <link rel="stylesheet" href="./static/css/schedules.css">
 
       <!-- * JS * -->
       <script src="./static/js/lib/material.min.js"></script>
@@ -305,6 +306,63 @@
          <!-- Edit FAB -->
          <div class="fab-container">
             <button type="submit" form="vehicle-create-form" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">done</button>
+         </div>
+      </section>
+
+
+
+      <!--
+      Schedules Page
+      -->
+      <section id="schedules-section" data-page="schedules">
+         <!-- Appbar -->
+         <header class="app-bar flex-horizontal-layout tinted">
+            <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">arrow_back</button>
+            <span>Schedules</span>
+         </header>
+
+         <!-- Sub appbar -->
+         <header class="app-bar flex-horizontal-layout tinted raised vehicle-info-app-bar">
+
+            <!-- Vehicle appbar info -->
+            <div class="flex-horizontal-layout">
+               <div id="schedules-vehicle-photo" class="round-thumbnail size-3" style="background-image: url(http://localhost:3000/media/v/p/04.jpg)"></div>
+               <div class="vertical-layout">
+                  <span id="schedules-vehicle-title" class="primary">[title] - [plate]</span>
+                  <span id="schedules-vehicle-description" class="secondary">[year] - [manufacturer] - [type]</span>
+               </div>
+               <span id="schedules-vehicle-date" class="tertiary">[date]</span>
+            </div>
+
+         </header>
+
+         <!-- Vehicle's schedules list -->
+         <ul id="schedules-list" class="list content-before-fab">
+            <!-- Example of an item -->
+            <!--
+            <li class="card box raised">
+               <div class="user vertical-layout">
+                  <span class="primary">
+                     [user-name]
+                  </span>
+                  <span class="secondary">
+                     [reason]
+                  </span>
+               </div>
+               <div class="duration flex-vertical-layout">
+                  <span>[start-date]</span>
+                  <span class="secondary">[start-time]</span>
+                  <i class="material-icons secondary">more_vert</i>
+                  <span class="secondary">[end-time]</span>
+                  <span>[end-date]</span>
+               </div>
+            </li> 
+            -->
+         </ul>
+
+         <!-- Add FAB -->
+         <div class="fab-container">
+            <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">add</button>
          </div>
       </section>
 
