Logging better displayed
- The logs entries are now beeing displayed in a new layout
- Now the log stream sends javascript objects to the renderer with all
information about the log, instead of strings

--- a/rest/ui/index.html
+++ b/rest/ui/index.html
@@ -36,11 +36,22 @@
       -->
       <section id="log-section" data-page="log">
          <header class="app-bar flex-horizontal-layout tinted raised">
-            <span>Response logs</span>
+            <span>Logs</span>
          </header>
 
          <!-- Logs list -->
          <ul id="log-list" class="list">
+            <!-- Example of a log entry -->
+            <!--
+            <li class="row">
+               <span class="status" data-status="400">[status]</span>
+               <div class="vertical-line"></div>
+               <div class="vertical-layout">
+                  <span class="primary">[method]</span>
+                  <span class="secondary">[route]</span>
+               </div>
+            </li>
+            -->
          </ul>
       </section>
    </body>
