Dialog system done
- Dialog and flat buttons layout got refined a bit
- Dialog system is now up and running
Now we can:
- Subscribe new dialogs to this system
- Open a new dialog, passing a parameter to it
- Dismiss the current dialog, if any
- Set actions to both open and dismiss events on a dialog

--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,11 @@
 
       <script src="./static/js/snack/snack.js"></script>
 
+      <script src="./static/js/dialog/Dialog.js"></script>
+      <script src="./static/js/dialog/dialogger.js"></script>
+
+      <script src="./static/js/dialogs/subscriptions.js"></script>
+
       <script src="./static/js/spa/Page.js"></script>
       <script src="./static/js/spa/spa.js"></script>
 
