--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,7 @@
       <script src="./static/js/pages/login.js"></script>
       <script src="./static/js/pages/index.js"></script>
       <script src="./static/js/pages/vehicle-info.js"></script>
-
+      <script src="./static/js/pages/schedule-create.js"></script>
       <title>Eiger</title>
    </head>
    <body>
