--- a/web/index.html
+++ b/web/index.html
@@ -63,6 +63,7 @@
       <script src="./static/js/pages/schedule-info.js"></script>
 
       <!-- * Dialogs * -->
+      <script src="./static/js/dialogs/user-picker.js"></script>
 
       <title>Eiger</title>
    </head>
@@ -476,7 +477,7 @@
 
          <!-- Add FAB -->
          <div class="fab-container">
-            <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">add</button>
+            <button id="schedules-create-done-fab" type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">add</button>
          </div>
       </section>
 
