--- a/web/index.html
+++ b/web/index.html
@@ -56,6 +56,7 @@
       <script src="./static/js/pages/login.js"></script>
       <script src="./static/js/pages/index.js"></script>
       <script src="./static/js/pages/vehicle-info.js"></script>
+      <script src="./static/js/pages/vehicle-update.js"></script>
 
       <!-- * Dialogs * -->
 
