FABs and date formatter
- Added missing FABs
- Added full date formatter (DD/MM/YYYY)

--- a/web/index.html
+++ b/web/index.html
@@ -135,7 +135,7 @@
          </header>
 
          <!-- Vehicles' cards list -->
-         <ul id="vehicles-list" class="list">
+         <ul id="vehicles-list" class="list content-before-fab">
             <!-- Example of a vehicle card -->
             <!--
             <li data-id="1" class="card box raised">
@@ -190,6 +190,11 @@
 
             -->
          </ul>
+
+         <!-- Add FAB -->
+         <div class="fab-container">
+            <button id="vehicles-add-fab" type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">add</button>
+         </div>
       </section>
 
 
@@ -240,7 +245,7 @@
 
          <!-- Edit FAB -->
          <div class="fab-container">
-            <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">edit</button>
+            <button id="vehicle-info-edit-fab" type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">edit</button>
          </div>
       </section>
 
