Base64 file encoder
- The Base64 file encoder is inside a global module now

--- a/web/index.html
+++ b/web/index.html
@@ -54,6 +54,8 @@
 
       <script src="./static/js/requests/requests.js"></script>
 
+      <script src="./static/js/file-encoder/file-encoder.js"></script>
+
       <!-- * Pages * -->
       <script src="./static/js/pages/login.js"></script>
       <script src="./static/js/pages/index.js"></script>
