Fabs-Navigation and Date Formate
Now the users can do:
- Click in button to edit vehicles and schedules

Now the users can see:
- The date formatted for pt-BR

More details:
- Changes in another codes

--- a/web/index.html
+++ b/web/index.html
@@ -562,7 +562,7 @@
 
          <!-- Edit FAB -->
          <div class="fab-container">
-            <button type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">edit</button>
+            <button id="schedule-info-edit-fab" type="button" class="material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">edit</button>
          </div>
       </section>
 
