Added dismiss button on snackbars
- The user can dismiss the current snackbar now

--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,6 @@
       <script src="./static/js/pages/schedule-info.js"></script>
       <script src="./static/js/pages/schedule-update.js"></script>
       <script src="./static/js/pages/vehicle-create.js"></script>
-
       
       <title>Eiger</title>
    </head>
@@ -881,9 +880,11 @@
       -->
       <div id="snackbar" class="snackbar raised">
          <!-- Snackbar text -->
-         <span id="snackbar-text"></span>
+         <span></span>
          <!-- Snackbar button -->
-         <button id="snackbar-button" type="button" class="mdl-js-button mdl-js-ripple-effect"></button>
+         <button type="button" class="mdl-js-button mdl-js-ripple-effect"></button>
+         <!-- Snackbar dismiss button -->
+         <button type="button" class="material-icons mdl-js-button mdl-js-ripple-effect">close</button>
       </div>
    </body>
 </html>
